--- a/css/style.css
+++ b/css/style.css
@@ -1530,6 +1530,10 @@ header {
     position: relative;
 }
 
+.two-sliders-slide {
+    padding-bottom: 130px;
+}
+
 .two-sliders-slide .col-1 {
     width: 58%;
 }
@@ -1586,6 +1590,10 @@ header {
     font-weight: normal;
     color: #353535;
     padding: 6px 0;
+}
+
+.miniatures-slider-block {
+    margin: -130px 0 0 0;
 }
 
 .article-inner-miniatures-slider {
@@ -1710,8 +1718,8 @@ header {
     vertical-align: top;
     width: auto;
     position: absolute;
-    bottom: -7px;
-    left: 65%;
+    bottom: -6px;
+    left: 63.3%;
 }
 
 .socials-block.inner_page {
@@ -2722,6 +2730,25 @@ header {
 .articles-slider-2_1 .slide .article {
     max-width: 100%;
     margin: 40px 0 0 0;
+    text-align: left;
+}
+
+.articles-slider-2_1 .slide .article h3 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 40px;
+    line-height: 40px;
+    font-weight: 900;
+    color: #353535;
+    padding-bottom: 24px;
+}
+
+.articles-slider-2_1 .slide .article p {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 19px;
+    line-height: 24px;
+    font-weight: normal;
+    color: #272727;
+    padding: 6px 0;
 }
 
 .articles-slider-2.articles-slider-2_1 .col-2 {
